chapter-06/cluster-apk8s-dev4/003-data/034-kibana/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: data
  labels:
    app: kibana
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: sysop-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
    - host: kib.data.dev4.apk8s.dev
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 5601
            path: /
  tls:
    - hosts:
        - kib.data.dev4.apk8s.dev
      secretName: data-production-tls
